# high_frequency_trading_architecture

./: .gitignore  Cargo.toml  readme.md
src/: account_and_transaction.rs  lib.rs  main.rs  process_using_mpsc.rs  process_using_single_consumer.rs  redis_consumer_groups.rs  redis_utils.rs
