[package]
name = "exchange_v2"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3"
rand = "0.8.5"
redis = { version = "0.27.2", features = ["aio", "tokio-comp"] }
# redis = "0.27.2"
serde_json = "1.0.128"
